# KinectPlugin

./: CMakeLists.txt  FaceTracker.cpp  FaceTracker.h  KinectImpl.cpp  KinectImpl.h  KinectPlugin.cpp  KinectView.cpp  KinectView.h  ManualMakefile
